--- a/vlayout/build.gradle
+++ b/vlayout/build.gradle
@@ -72,6 +72,7 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }    }
+    buildToolsVersion '25.0.0'
 }
 
 dependencies {
