--- a/vlayout/build.gradle
+++ b/vlayout/build.gradle
@@ -24,42 +24,42 @@
 
 apply plugin: 'com.android.library'
 
-ext {
-    bintrayRepo = 'Tangram'
-    bintrayName = 'vlayout'
-
-    publishedGroupId = GROUP
-    libraryName = ARTIFACT
-    artifact = ARTIFACT
-
-    libraryDescription = 'Project vlayout is a powerfull LayoutManager extension for RecyclerView, it provides a group of layouts for RecyclerView. Make it able to handle a complicate situation when grid, list and other layouts in the same recyclerview.'
-
-    siteUrl = 'https://github.com/alibaba/vlayout'
-    gitUrl = 'https://github.com/alibaba/vlayout.git'
-
-    libraryVersion = VERSION_NAME
-
-    developerId = 'longerian'
-    developerName = 'longerian'
-    developerEmail = 'xlhongultimate@gmail.com'
-
-    licenseName = 'MIT'
-    licenseUrl = 'https://opensource.org/licenses/MIT'
-    allLicenses = ["MIT"]
-}
-
-def VERSION = System.properties['version'] ?: '10'
-def VERSION_NAME = System.properties['versionName'] ?: '0.1.0'
+//ext {
+//    bintrayRepo = 'Tangram'
+//    bintrayName = 'vlayout'
+//
+//    publishedGroupId = GROUP
+//    libraryName = ARTIFACT
+//    artifact = ARTIFACT
+//
+//    libraryDescription = 'Project vlayout is a powerfull LayoutManager extension for RecyclerView, it provides a group of layouts for RecyclerView. Make it able to handle a complicate situation when grid, list and other layouts in the same recyclerview.'
+//
+//    siteUrl = 'https://github.com/alibaba/vlayout'
+//    gitUrl = 'https://github.com/alibaba/vlayout.git'
+//
+//    libraryVersion = VERSION_NAME
+//
+//    developerId = 'longerian'
+//    developerName = 'longerian'
+//    developerEmail = 'xlhongultimate@gmail.com'
+//
+//    licenseName = 'MIT'
+//    licenseUrl = 'https://opensource.org/licenses/MIT'
+//    allLicenses = ["MIT"]
+//}
+//
+//def VERSION = System.properties['version'] ?: '10'
+//def VERSION_NAME = System.properties['versionName'] ?: '0.1.0'
 
 android {
-    compileSdkVersion Integer.parseInt(System.properties['compileSdkVersion'] ?: '22')
-    buildToolsVersion System.properties['buildToolsVersion']
+    compileSdkVersion 25
+    buildToolsVersion "25.0.1"
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion Integer.parseInt(System.properties['targetSdkVersion'] ?: '14')
-        versionCode Integer.parseInt(VERSION ?: '10')
-        versionName VERSION_NAME
+        targetSdkVersion 25
+        versionCode 1
+        versionName "1.0"
     }
 
     compileOptions {
@@ -88,17 +88,17 @@ dependencies {
 }
 
 
-File deployConfig = rootProject.file('deploy.gradle')
-if (deployConfig.exists()) {
-    apply from: rootProject.file('deploy.gradle')
-}
-
-deployConfig = rootProject.file('jcenterInstall.gradle')
-if (deployConfig.exists()) {
-    apply from: rootProject.file('jcenterInstall.gradle')
-}
-
-deployConfig = rootProject.file('jcenterDeploy.gradle')
-if (deployConfig.exists()) {
-    apply from: rootProject.file('jcenterDeploy.gradle')
-}
+//File deployConfig = rootProject.file('deploy.gradle')
+//if (deployConfig.exists()) {
+//    apply from: rootProject.file('deploy.gradle')
+//}
+//
+//deployConfig = rootProject.file('jcenterInstall.gradle')
+//if (deployConfig.exists()) {
+//    apply from: rootProject.file('jcenterInstall.gradle')
+//}
+//
+//deployConfig = rootProject.file('jcenterDeploy.gradle')
+//if (deployConfig.exists()) {
+//    apply from: rootProject.file('jcenterDeploy.gradle')
+//}
