--- a/build.gradle
+++ b/build.gradle
@@ -26,12 +26,15 @@
 
 buildscript {
     repositories {
+        maven {
+            url 'https://maven.google.com'
+        }
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
         mavenCentral()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha4'
         classpath 'com.github.xfumihiro.view-inspector:view-inspector-plugin:0.1.1'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
@@ -40,6 +43,9 @@ buildscript {
 
 allprojects {
     repositories {
+        maven {
+            url 'https://maven.google.com'
+        }
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
         jcenter()
         mavenLocal()
