--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -49,10 +49,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':vlayout')
-    compile 'com.crittercism.dexmaker:dexmaker:1.4'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.android.support:appcompat-v7:21.0.0'
-    compile 'com.android.support:support-annotations:21.0.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(':vlayout')
+    implementation 'com.crittercism.dexmaker:dexmaker:1.4'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.android.support:appcompat-v7:25.3.1'
+    implementation 'com.android.support:support-annotations:25.3.1'
 }
