--- a/vlayout/build.gradle
+++ b/vlayout/build.gradle
@@ -76,15 +76,15 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     // compile project(':extension')
-    compile 'com.android.support:recyclerview-v7:23.1.1@aar'
-    compile('com.android.support:support-v4:23.1.1@aar') {
+    implementation 'com.android.support:recyclerview-v7:25.3.1'
+    implementation('com.android.support:support-v4:25.3.1') {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
-    compile 'com.android.support:support-annotations:23.1.1'
+    implementation 'com.android.support:support-annotations:25.3.1'
 
-    androidTestCompile "org.robolectric:robolectric:3.0"
+    androidTestImplementation "org.robolectric:robolectric:3.0"
 }
 
 
