--- a/vlayout/build.gradle
+++ b/vlayout/build.gradle
@@ -53,7 +53,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.1"
+    buildToolsVersion "25.0.3"
 
     defaultConfig {
         minSdkVersion 14
@@ -78,11 +78,11 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     // compile project(':extension')
-    implementation 'com.android.support:recyclerview-v7:25.3.1'
-    implementation('com.android.support:support-v4:25.3.1') {
+    api 'com.android.support:recyclerview-v7:25.3.1'
+    api('com.android.support:support-v4:25.3.1') {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
-    implementation 'com.android.support:support-annotations:25.3.1'
+    api 'com.android.support:support-annotations:25.3.1'
 
     androidTestImplementation "org.robolectric:robolectric:3.0"
 }
